--- a/manifest.json
+++ b/manifest.json
@@ -4,16 +4,25 @@
   "description": "Displays scrolling odds and betting lines for upcoming games across multiple sports leagues including NFL, NBA, MLB, NCAA Football, and more",
   "author": "ChuckBuilds",
   "category": "sports",
-  "tags": ["odds", "betting", "ticker", "sports", "nfl", "nba", "mlb", "ncaa", "scrolling"],
-  "repo": "https://github.com/ChuckBuilds/ledmatrix-plugins",
-  "branch": "main",
-  "plugin_path": "plugins/odds-ticker",
+  "tags": [
+    "odds",
+    "betting",
+    "ticker",
+    "sports",
+    "nfl",
+    "nba",
+    "mlb",
+    "ncaa",
+    "scrolling"
+  ],
+  "repo": "https://github.com/ChuckBuilds/ledmatrix-odds-ticker",
+  "branch": "fix/update-interval-type-error",
+  "plugin_path": "",
   "versions": [
     {
       "version": "1.0.1",
       "ledmatrix_min": "2.0.0",
-      "released": "2025-10-12",
-      "download_url": "https://github.com/ChuckBuilds/ledmatrix-plugins/archive/refs/heads/main.zip"
+      "released": "2025-10-12"
     }
   ],
   "stars": 0,
@@ -28,5 +37,6 @@
     "managers": [
       "odds_manager"
     ]
-  }
+  },
+  "download_url_template": "https://github.com/ChuckBuilds/ledmatrix-odds-ticker/archive/refs/tags/v{version}.zip"
 }
