--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "id": "odds-ticker",
   "name": "Odds Ticker",
-  "description": "Displays scrolling odds and betting lines for upcoming games across multiple sports leagues including NFL, NBA, MLB, NCAA Football, and more",
   "author": "ChuckBuilds",
+  "description": "Displays scrolling odds and betting lines for upcoming games across multiple sports leagues including NFL, NBA, MLB, NCAA Football, and more",
   "category": "sports",
   "tags": [
     "odds",
@@ -15,28 +15,20 @@
     "ncaa",
     "scrolling"
   ],
-  "repo": "https://github.com/ChuckBuilds/ledmatrix-odds-ticker",
-  "branch": "fix/update-interval-type-error",
-  "plugin_path": "",
-  "versions": [
-    {
-      "version": "1.0.1",
-      "ledmatrix_min": "2.0.0",
-      "released": "2025-10-12"
-    }
-  ],
-  "stars": 0,
-  "downloads": 0,
-  "last_updated": "2025-10-12",
-  "verified": true,
-  "screenshot": "",
   "display_modes": [
     "odds_ticker"
   ],
-  "dependencies": {
-    "managers": [
-      "odds_manager"
-    ]
-  },
-  "download_url_template": "https://github.com/ChuckBuilds/ledmatrix-odds-ticker/archive/refs/tags/v{version}.zip"
+  "download_url_template": "https://github.com/ChuckBuilds/ledmatrix-odds-ticker/archive/refs/tags/v{version}.zip",
+  "versions": [
+    {
+      "released": "2025-10-12",
+      "version": "1.0.1",
+      "ledmatrix_min": "2.0.0"
+    }
+  ],
+  "last_updated": "2025-10-12",
+  "stars": 0,
+  "downloads": 0,
+  "verified": true,
+  "screenshot": ""
 }
