--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "id": "odds-ticker",
   "name": "Odds Ticker",
+  "version": "1.0.2",
   "author": "ChuckBuilds",
   "description": "Displays scrolling odds and betting lines for upcoming games across multiple sports leagues including NFL, NBA, MLB, NCAA Football, and more",
   "category": "sports",
