feat: Refactor odds ticker plugin to match original visual layout
- Break down monolithic manager.py into modular components:
  - data_fetcher.py: Handles API calls and data fetching
  - odds_renderer.py: Manages display rendering and scrolling
  - game_filter.py: Filters and sorts games
- Restore exact visual layout from original odds_ticker_manager.py:
  - Away Logo → 'vs.' → Home Logo → Team Names → Odds → Date/Time → Broadcast Logo
  - Proper logo sizing (logo_size = int(height * 1.2))
  - Correct spacing (h_padding = 4, gap_width = 24)
  - PressStart2P-Regular.ttf fonts at 8px medium size
  - Stacked team names and odds layout
  - Three-line date/time format
- Fix team logo loading from assets/sports/{league_logos}/{team_abbr}.png
- Implement proper broadcast logo positioning and sizing
- Add comprehensive scrolling functionality with wrap-around
- Maintain all original configuration options and functionality
- Update manifest.json with correct class_name

--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,7 @@
   "display_modes": [
     "odds_ticker"
   ],
+  "class_name": "OddsTickerPlugin",
   "dependencies": {
     "managers": [
       "odds_manager"
