--- a/manifest.json
+++ b/manifest.json
@@ -26,8 +26,6 @@
   ],
   "class_name": "OddsTickerPlugin",
   "dependencies": {
-    "managers": [
-      "odds_manager"
-    ]
+    "managers": []
   }
 }
